// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSCFromTypography Returns a SC object 1`] = `
Object {
  "font-family-general": "Roboto",
  "font-family-xxl": "Roboto",
  "font-size-xl": "16px",
  "font-size-xxl": "20px",
  "font-style-general": "normal",
  "font-weight-xxl": 400,
  "letter-spacing-general": "0px",
  "letter-spacing-xl": "0px",
  "letter-spacing-xxl": "0px",
  "line-height-l": "1.625",
  "line-height-xl": "418.27",
  "line-height-xxl": "1.5",
  "text-decoration-general": "unset",
  "text-transform-general": "none",
}
`;

exports[`getSCFromTypography Returns a SC object keeping global values 1`] = `
Object {
  "button-background-color": "rgba(23,255,25,1)",
  "button-background-color-global": true,
  "button-color": "rgba(14,34,234,1)",
  "button-color-global": true,
  "button-font-family-general": "Roboto",
  "button-font-size-l": "16px",
  "button-font-size-xl": "18px",
  "button-font-size-xxl": "22px",
  "button-font-style-general": "normal",
  "button-font-weight-general": "500",
  "button-letter-spacing-xxl": "0px",
  "button-line-height-xl": "1.625",
  "button-line-height-xxl": "1.5",
  "button-text-decoration-general": "unset",
  "button-text-transform-general": "none",
}
`;

exports[`getSCFromTypography Returns a SC object using decimal number for \`letter-spacing\` 1`] = `
Object {
  "font-family-general": "Roboto",
  "font-family-xxl": "Roboto",
  "font-size-s": "42px",
  "font-size-xl": "16px",
  "font-size-xxl": "20px",
  "font-style-general": "normal",
  "font-weight-xxl": 400,
  "letter-spacing-general": "19.2px",
  "letter-spacing-xl": "0px",
  "letter-spacing-xxl": "0px",
  "line-height-l": "1.625",
  "line-height-xl": "418.27",
  "line-height-xxl": "1.5",
  "text-decoration-general": "unset",
  "text-transform-general": "none",
}
`;

exports[`getSCFromTypography Returns a SC object using others responsive stage unit for \`font-size\` 1`] = `
Object {
  "font-family-general": "Roboto",
  "font-family-xxl": "Roboto",
  "font-size-s": "42px",
  "font-size-xl": "16px",
  "font-size-xxl": "20px",
  "font-style-general": "normal",
  "font-weight-xxl": 400,
  "letter-spacing-general": "0px",
  "letter-spacing-xl": "0px",
  "letter-spacing-xxl": "0px",
  "line-height-l": "1.625",
  "line-height-xl": "418.27",
  "line-height-xxl": "1.5",
  "text-decoration-general": "unset",
  "text-transform-general": "none",
}
`;
